# PROG2007

./: .gitignore  CMakeLists.txt
TESTINGAREA/: main.c
TESTINGAREA/idk/: test.c
celsius/: main.c
evenmultiple/: main.c
hello/: CMakeLists.txt  Hello.c
polynomial/: main.c
